# metagenome-pipeline-benchmark

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  from-workbench-to-metagenome-pipeline-benchmark.txt  pyproject.toml  requirements.txt
configs/: benchmark.config  pipeline_registry.yml
docs/CURRENT/: benchmark-integration-guide.md  caching-reality-check.md  cleanup-plan.md  cross-repo-benchmark-architecture.md  database-management-strategy.md  existing-db-migration-strategy.md  immediate-vs-future-strategy.md  implementation.md  planning.md  realistic-approach.md  resistance-tracker-migration-plan.md  simple-conclusion.md  storage-strategy.md  streamlit-dashboard-design.md
docs/prd/: prd.md
docs/tutorials/: dataset_setup.md  getting_started.md
scripts/: continue_setup.sh  migrate_databases.sh  quick_benchmark.sh  setup_production_db.sh  user_db_setup.sh
src/: __init__.py
workflows/: main.nf
